--- a/EMD_Website/index.html
+++ b/EMD_Website/index.html
@@ -69,6 +69,7 @@
                           <i class="fa fa-terminal fa-stack-1x fa-inverse"></i>
                       </span>
                       <h3>Service 1</h3>
+                        <a class="btn btn-primary btn-lg" href="#">Find Out More</a>
                   </div>
                   <div class="col-md-3 col-sm-3 text-center">
                       <span class="fa-stack fa-lg fa-4x">
@@ -76,6 +77,7 @@
                           <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                       </span>
                       <h3>Service 2</h3>
+                          <a class="btn btn-primary btn-lg" href="#">Find Out More</a>
                   </div>
                   <div class="col-md-3 col-sm-3 text-center">
                       <span class="fa-stack fa-lg fa-4x">
@@ -83,6 +85,7 @@
                           <i class="fa fa-phone-square fa-stack-1x fa-inverse"></i>
                       </span>
                       <h3>Service 3</h3>
+                          <a class="btn btn-primary btn-lg" href="#">Find Out More</a>
                   </div>
                   <div class="col-md-3 col-sm-3 text-center">
                       <span class="fa-stack fa-lg fa-4x">
@@ -90,6 +93,7 @@
                           <i class="fa fa-calculator fa-stack-1x fa-inverse"></i>
                       </span>
                       <h3>Service 4</h3>
+                          <a class="btn btn-primary btn-lg" href="#">Find Out More</a>
                   </div>
               </div>
           </div>
