--- a/EMD_Website/pre_login.html
+++ b/EMD_Website/pre_login.html
@@ -32,7 +32,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="sign_up.html">Sign Up</a></li>
-            <li><a href="#about">Log In</a></li>
+            <li><a href="login.html">Log In</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
