--- a/EMD_Website/home.html
+++ b/EMD_Website/home.html
@@ -33,7 +33,7 @@
             <li class="active"><a href="#">Home</a></li>
             <li><a href="sign_up.html">Sign Up</a></li>
             <li><a href="login.html">Log In</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="help.html">Help</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
