--- a/EMD_Website/index.html
+++ b/EMD_Website/index.html
@@ -30,10 +30,11 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#about">Services</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li class="active"><a href="#">Dashboard</a></li>
+            <li><a href="#about">Forms</a></li>
+            <li><a href="#about">Calendar</a></li>
+            <li><a href="#contact">Map's</a></li>
+            <li><a href="#contact">Log Out</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
