small change to index file

--- a/EMD_Website/index.html
+++ b/EMD_Website/index.html
@@ -45,7 +45,7 @@
               <div class="row">
                   <div class="col-md-7">
                       <div class="animated fadeInLeft">
-                          <h1>Introduction</h1>
+                          <h1>Dashboard</h1>
                           <p>Some text to introduce the business and its main services and the main areas we work in</p>
                           <p>Outline the main services </p>
                           <p>Locations we cover</p>
@@ -54,7 +54,7 @@
                   </div>
                   <div class="col-md-5">
                       <div class="animated fadeInUp">
-                      <img src="img/logos.png">
+                     
                       </div>
                   </div>
               </div>
