--- a/EMD_Website/forms.html
+++ b/EMD_Website/forms.html
@@ -48,7 +48,7 @@
                           <i class="fa fa-circle fa-stack-2x fa-color"></i>
                           <i class="fa fa-terminal fa-stack-1x fa-inverse"></i>
                       </span>
-                      <h3>Service 1</h3>
+                      <h3>Smart Vision</h3>
                         <a class="btn btn-primary btn-lg" href="#">Find Out More</a>
 
                       <span class="fa-stack fa-lg fa-4x">
@@ -79,7 +79,68 @@
                   </div>
 <!-- Start of Form Div-->
                   <div class="col-md-7 col-sm-7 text-center">
-                      
+                      <h2>Smart Vision Form</h2>
+                     <form class="form-inline">
+                      <div class="form-group">
+                        <label class="sr-only" for="exampleInputEmail3">Email address</label>
+                        <input type="text" class="form-control" id="exampleInputDate3" placeholder="Date">
+                      </div>
+                      <div class="form-group">
+                        <label class="sr-only" for="exampleInputPassword3">Password</label>
+                        <input type="text" class="form-control" id="exampleInputTime3" placeholder="Time">
+                      </div>
+                      <div class="checkbox">
+                        <label>
+                          <input type="checkbox"> Installation
+                        </label>
+                      </div>
+                      <div class="checkbox">
+                        <label>
+                          <input type="checkbox"> Fault
+                        </label>
+                      </div>     
+                    </form>                     
+                      <br>
+                    <form class="form-horizontal">                    
+                      <div class="form-group">
+                        <label for="inputEmail3" class="col-sm-2 control-label">Name:</label>
+                        <div class="col-sm-10">
+                          <input type="email" class="form-control" id="inputEmail3" placeholder="Name">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label for="inputPassword3" class="col-sm-2 control-label">Address:</label>
+                        <div class="col-sm-10">
+                          <input type="password" class="form-control" id="inputPassword3" placeholder="Address">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label for="inputPassword3" class="col-sm-2 control-label">Phone No:</label>
+                        <div class="col-sm-10">
+                          <input type="password" class="form-control" id="inputPassword3" placeholder="Mobile">
+                        </div>
+                      </div>
+
+                      <div class="form-group">
+                        <label for="inputPassword3" class="col-sm-2 control-label">Summary:</label>
+                        <div class="col-sm-10">
+                          <textarea class="form-control" rows="3"></textarea>
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label for="inputPassword3" class="col-sm-2 control-label">Technicians Comments:</label>
+                        <div class="col-sm-10">
+                          <textarea class="form-control" rows="3"></textarea>
+                        </div>
+                      </div>
+
+
+                      <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                          <button type="submit" class="btn btn-default">Submit</button>
+                        </div>
+                      </div>
+                    </form>
                       
 
                   </div>
