small changes to index page

--- a/EMD_Website/index.html
+++ b/EMD_Website/index.html
@@ -46,7 +46,7 @@
                   <div class="col-md-7">
                       <div class="animated fadeInLeft">
                           <h1>Dashboard</h1>
-                          <p>Some text to introduce the business and its main services and the main areas we work in</p>
+                          <p>This area of the website will give access to the different services and will allow the customer to create and edit new appointments</p>
                           <p>Outline the main services </p>
                           <p>Locations we cover</p>
                           <a class="btn btn-primary btn-lg" href="#">Find Out More</a>
