add calendar and map's page log out button goes to home page

--- a/EMD_Website/index.html
+++ b/EMD_Website/index.html
@@ -32,9 +32,9 @@
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="index.html">Dashboard</a></li>
             <li><a href="forms.html">Forms</a></li>
-            <li><a href="#about">Calendar</a></li>
-            <li><a href="#contact">Map's</a></li>
-            <li><a href="#contact">Log Out</a></li>
+            <li><a href="calendar.html">Calendar</a></li>
+            <li><a href="maps.html">Map's</a></li>
+            <li><a href="home.html">Log Out</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -70,7 +70,7 @@
                           <i class="fa fa-terminal fa-stack-1x fa-inverse"></i>
                       </span>
                       <h3>Service 1</h3>
-                        <a class="btn btn-primary btn-lg" href="#">Find Out More</a>
+                        <a class="btn btn-primary btn-lg" href="forms.html">Find Out More</a>
                   </div>
                   <div class="col-md-3 col-sm-3 text-center">
                       <span class="fa-stack fa-lg fa-4x">
@@ -78,7 +78,7 @@
                           <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                       </span>
                       <h3>Service 2</h3>
-                          <a class="btn btn-primary btn-lg" href="#">Find Out More</a>
+                          <a class="btn btn-primary btn-lg" href="forms.html">Find Out More</a>
                   </div>
                   <div class="col-md-3 col-sm-3 text-center">
                       <span class="fa-stack fa-lg fa-4x">
@@ -86,7 +86,7 @@
                           <i class="fa fa-phone-square fa-stack-1x fa-inverse"></i>
                       </span>
                       <h3>Service 3</h3>
-                          <a class="btn btn-primary btn-lg" href="#">Find Out More</a>
+                          <a class="btn btn-primary btn-lg" href="forms.html">Find Out More</a>
                   </div>
                   <div class="col-md-3 col-sm-3 text-center">
                       <span class="fa-stack fa-lg fa-4x">
@@ -94,7 +94,7 @@
                           <i class="fa fa-calculator fa-stack-1x fa-inverse"></i>
                       </span>
                       <h3>Service 4</h3>
-                          <a class="btn btn-primary btn-lg" href="#">Find Out More</a>
+                          <a class="btn btn-primary btn-lg" href="forms.html">Find Out More</a>
                   </div>
               </div>
           </div>
