--- a/EMD_Website/forms.html
+++ b/EMD_Website/forms.html
@@ -35,6 +35,7 @@
             <li><a href="calendar.html">Calendar</a></li>
             <li><a href="maps.html">Map's</a></li>
             <li><a href="home.html">Log Out</a></li>
+            <li><a href="home.html">Log Out</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
