--- a/EMD_Website/index.html
+++ b/EMD_Website/index.html
@@ -54,7 +54,7 @@
                   </div>
                   <div class="col-md-5">
                       <div class="animated fadeInUp">
-                     
+                     <p> This is New</p>
                       </div>
                   </div>
               </div>
