--- a/EMD-WebProject-2016/index.html
+++ b/EMD-WebProject-2016/index.html
@@ -9,7 +9,9 @@
 	  <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 	  <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>  
     <!-- Custom styles for this template -->
-    <link href="css/main.css" rel="stylesheet">
+	<link href="css/bootstrap.css" rel="stylesheet">
+	<link href="css/font-awesome.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
 
   <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
@@ -22,7 +24,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">EMD Technology Solutions Limited</a>
+          <a class="navbar-brand" href="#">EMD Technology Solutions Ltd</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse navbar-right navbar-main-collapse">
           <ul class="nav navbar-nav">
@@ -42,8 +44,8 @@
 				  <div class="row">
 					  <div class="col-md-8 col-md-offset-2">
 						  <h1 class="brand-heading">Welcome</h1>
-						  <p class="intro-text"><strong>EMD Technology Solutions</strong> </p>
-						  <p>for all your out-sourced telecoms requirments</p>
+						  <h1><strong>EMD Technology Solutions Ltd</strong></h1>
+						  <h3>for all your out-sourced telecoms requirments</h3>
 					  </div>
 				  </div>
 			  </div>
@@ -93,7 +95,7 @@
 			  <div class="col-md-4">
 				  <div class="block block-icon-left">
 					  <div class="icon">
-						  <i class="fa fa-ticket fa-5x"></i>
+						  <i class="fa fa-exchange fa-5x"></i>
 					  </div>
 					  <div class="icon-content">
 						  <h3>Service 1</h3>
@@ -104,11 +106,11 @@
 			  <div class="col-md-4">
 				  <div class="block block-icon-left">
 					  <div class="icon">
-						  <i class="fa fa-exchange fa-5x"></i>
+						  <i class="fa fa-book fa-5x"></i>
 					  </div>
 					  <div class="icon-content">
-						  <h3>Service 2</h3>
-						  <p>Effective maintenance and repair </p>
+						  <h3>Research and Development</h3>
+						  <p>Develop new markets while controlling your cost base</p>
 					  </div>
 				  </div>
 			  </div>
@@ -118,7 +120,7 @@
 						  <i class="fa fa-eye fa-5x"></i>
 					  </div>
 					  <div class="icon-content">
-						  <h3>Service 3</h3>
+						  <h3>Managing Your Business</h3>
 						  <p>Prompt service to all areas of the country</p>
 					  </div>
 				  </div>
@@ -130,7 +132,7 @@
 		  <div class="signup-section">
 			  <div class="container">
 				  <div class="row">
-					  <div class="col-md-8 col-md-offset-2">
+					  <div class="col-md-6 col-md-offset-3">
 						  <h2>Sign Up</h2>
 						  <form class="form-horizontal">
 							  <div class="form-group">
@@ -170,7 +172,7 @@
 		  <div class="login-section">
 			  <div class="container">
 				  <div class="row">
-					  <div class="col-md-8 col-md-offset-2">
+					  <div class="col-md-6 col-md-offset-3">
 						  <h2>Login</h2>
 						  <form class="form-horizontal">
 							  <div class="form-group">
